<resources>
    <!-- Aplikazioa -->
    <string name="app_name">Erronka 1</string>
    <string name="Tag">Errorea-TX</string>

    <!-- Nabigazioan erabiliko diren kateak -->
    <string name="first_fragment_label">Lehenengo Fragmentua</string>
    <string name="second_fragment_label">Bigarren Fragmentua</string>
    <string name="next">Hurrengoa</string>
    <string name="previous">Aurrekoa</string>

    <!-- Saioa hasi -->
    <string name="registrar">Erregistratu</string>
    <string name="acceder">Sartu</string>
    <string name="email">Posta elektronikoa</string>
    <string name="pass">Pasahitza</string>
    <string name="salir">Saioa itxi</string>
    <string name="pantalla">Pantaila</string>
    <string name="google">Google</string>
    <string name="recordar">Gogoratu</string>

    <!-- Erroreak -->
    <string name="error1">Zatikia hutsik dago</string>
    <string name="title_activity_base">Oina-aktivitatea</string>

    <!-- Menua -->
    <string name="o1">Hasiera</string>
    <string name="o2">Erabiltzailea</string>
    <string name="o3">Eskaerak</string>
    <string name="o4">Erosketak</string>

    <!-- Bestelakoak -->
    <string name="descripcionMapa">Hau mapa bat da</string>
    <string name="descripcionLayout">Hau diseinua da</string>

    <!-- Bestelakoak -->
    <string name="cerrar">Saioa itxi</string>

    <!-- Profila -->
    <string name="zure_pausuak">Zure pausuak</string>
    <string name="editicon">Editatu ikurra</string>
    <string name="aldatu_pasahitza">Pasahitza aldatu</string>
    <string name="zure_pazahitza">Zure oraingo pasahitza</string>
    <string name="pasahitz_berria">Pasahitz berria</string>
    <string name="oldPassword">Sartu zure oraingo pasahitza</string>
    <string name="newPassword">Sartu pasahitz berria</string>

    <!-- Nagusira -->
    <string name="seasonButtonMainMenu">Denboraldi botoia</string>
    <string name="menuicon">Menu ikurra</string>
    <string name="loginicon">Saioa hasi ikurra</string>
    <string name="farmericon">Nekazari ikurra</string>
    <string name="title_activity_main_pagina_tienda">Nagusia-aktivitatea_Dendaren Orrialdea</string>
    <string name="title_home">Hasiera</string>
    <string name="title_dashboard">Mahaia</string>
    <string name="title_notifications">Jakinarazpenak</string>

    <string name="btn_tienda_1">Aholkuak</string>
    <string name="btn_tienda_2">Lehenengo platerak</string>
    <string name="btn_tienda_3">Hasiera platerak</string>
    <string name="btn_tienda_4">Gose Sorpresa</string>
    <string name="irten">Irten</string>
    <string name="denak_zure_gertu">Zure inguruan dena</string>
    <string name="gure_ornitzileak">Hornitzaleak</string>
    <string name="logo">Logotipoa</string>
    <string name="sasoikoa">Denboraldia</string>
    <string name="ikusi_zer_daukagun_menuan">Menuan daukaguna ikusi</string>
    <string name="eskatu_etxera">Erosketa etxera</string>
    <string name="guk_eramango_dizugu">Guk eramango dizugu</string>
    <string name="erreserbak">Erreserbatu</string>
    <string name="erreserbakDesc">Zatoz gurekin</string>
    <string name="guriBuruz">Guri buruz</string>
    <string name="guriBuruzDesc">Ezagutu gaitzazu</string>

    <!-- Denboraldiak -->
    <string name="precio">Prezioa</string>
    <string name="quitar">Kendu</string>
    <string name="añadir">Gehitu</string>
    <string name="pedido_titulo">"Erokseta data"</string>
    <string name="I">NEGUA</string>
    <string name="P">UDABERRIA</string>
    <string name="O">UDAZKENA</string>
    <string name="V">UDAZKOA</string>

    <!-- Pedidos -->
    <string name="confirmarEntrega">Entrega baieztatu</string>
    <string name="entregado">Entregatuta</string>
    <string name="eliminar">Ezabatu</string>

    <!-- Erreserbak -->
    <string name="ordua">Ordua</string>
    <string name="pertsonak">Pertsonak</string>
    <string name="erreserbatu">Erreserbatu</string>

    <!-- JANARIAK -->

    <!-- Negukoak -->
    <string name="food_01">Bieira “carpaccio”-a zitrikoekin</string>
    <string name="food_02">Lapikoko oilo kroketak</string>
    <string name="food_03">Mailoa laban piper eta azalore pistoarekin</string>
    <string name="food_04">Iberiar sekretua barazkiekin ardo saltsan</string>
    <string name="food_05">Txokolate soufflea</string>

    <!-- Udaberrikoa -->
    <string name="food_06">“Piquillo”-ko piperrak antxoekin modena eran</string>
    <string name="food_07">Gamba gorrien “risotto”-a</string>
    <string name="food_08">Atun “tataki”-a brasan baratxuri zuri kremarekin</string>
    <string name="food_09">Bildotza laban panadera era patatekin</string>
    <string name="food_10">Yogurt mousse-a kiwi eta papaia infusioarekin</string>

    <!-- Udakoa -->
    <string name="food_11">Tomate eta zainzuri “tartar”-a vinagretarekin</string>
    <string name="food_12">“Fettuccini” almejekin</string>
    <string name="food_13">Legatza tipula karamelizatuarekin</string>
    <string name="food_14">“Roast Beef”-a Gernikako piperrekin</string>
    <string name="food_15">Gazta tarta melokotoizko marmeladarekin</string>

    <!-- Udazkenekoak -->
    <string name="food_16">Patata parmentierra, onddo, arrautz eta trufarekin</string>
    <string name="food_17">Porru eta txistor kaneloiak</string>
    <string name="food_18">Olagarroa kalabaza kremarekin</string>
    <string name="food_19">Ahatea udare saltsarekin</string>
    <string name="food_20">Sagar “crumble”-a mandarina izozkiarekin</string>
    <string name="tema">Tema</string>

    <!-- GoseS -->
    <string name="goseS_01">Afari sorpresa, eskatu zerbait arina afaltzeko</string>
    <string name="goseS_02">Gose zara? Gure aperitiboek harrituko zaituzte</string>
    <string name="goseS_03">Ez sukaldatu, gure Gose Sorpesa handiarekin nahikoa dago</string>

    <!-- Erreserbak -->
    <string name="erreserba">Erreserba baieztatu da</string>

</resources>