<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgreyDark"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="381dp"
        android:layout_height="516dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:ems="10"
            android:fontFamily="@font/catamaran_black"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passTxt"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:ems="10"
            android:fontFamily="@font/catamaran_black"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="71dp"
            android:layout_height="77dp"
            android:layout_gravity="center"
            android:visibility="invisible" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="223dp">

            <Button
                android:id="@+id/accederBtn"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_marginBottom="107dp"
                android:layout_weight="1"
                android:fontFamily="@font/catamaran_black"
                android:text="@string/acceder"
                app:layout_constraintBottom_toTopOf="@+id/googleBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/registrarBtn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="59dp"
                android:layout_weight="1"
                android:fontFamily="@font/catamaran_black"
                android:text="@string/registrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/accederBtn" />

            <Button
                android:id="@+id/googleBtn"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/catamaran_black"
                android:text="@string/google"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accederBtn" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="35dp"
                android:layout_height="27dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/googlelogo"
                app:layout_constraintBottom_toBottomOf="@+id/googleBtn"
                app:layout_constraintStart_toStartOf="@+id/googleBtn"
                app:layout_constraintTop_toTopOf="@+id/googleBtn"
                app:layout_constraintVertical_bias="0.478" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navMenu"
        app:itemIconTint="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/roundednav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>