<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ErreserbakActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="335dp"
        android:layout_height="350dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_button"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CalendarView
            android:id="@+id/calendarView"
            style="@android:style/Widget.DeviceDefault.CalendarView"
            android:layout_width="match_parent"
            android:layout_height="332dp"
            android:focusedMonthDateColor="@color/colorPrimaryDark"
            android:maxDate="11/01/2023"
            android:minDate="10/01/2023"
            android:selectedWeekBackgroundColor="@color/colorPrimaryDark" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="336dp"
            android:layout_height="223dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/rounded_button"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Space
                android:layout_width="match_parent"
                android:layout_height="28dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="91dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/catamaran_black"
                    android:text="@string/ordua"
                    android:textAlignment="viewStart"
                    android:textSize="20sp"
                    tools:text="@string/ordua" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/catamaran_black"
                    android:text="@string/pertsonak"
                    android:textSize="20sp"
                    tools:text="@string/pertsonak" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp" />

            </LinearLayout>

            <Space
                android:layout_width="301dp"
                android:layout_height="17dp" />

            <Button
                android:id="@+id/confirmar"
                android:layout_width="303dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_button_green"
                android:fontFamily="@font/catamaran_black"
                android:text="@string/erreserbatu"
                android:textColor="@color/colorgrey" />
        </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navMenu"
            app:itemIconTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:background="@drawable/roundednav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>