<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity_Pagina_Tienda">


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="416dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorgrey"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button"
                android:layout_width="195dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/catamaran_black"
                android:text="@string/btn_tienda_1"
                tools:layout_editor_absoluteX="330dp"


                tools:layout_editor_absoluteY="1000dp" />


            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/catamaran_black"
                android:text="@string/btn_tienda_2"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="1000dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/catamaran_black"
                android:text="@string/btn_tienda_3"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="1000dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/catamaran_black"
                android:text="@string/btn_tienda_4"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="1000dp" />


        </LinearLayout>


    </HorizontalScrollView>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="413dp"
        android:layout_height="459dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">


                <LinearLayout
                    android:layout_width="165dp"
                    android:layout_height="178dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:ignore="ExtraText">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/catamaran_black"
                        android:text="Ensalada cesar con nueces"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="81dp"
                        android:text="La clásica ensalada cesar con un toque especial de la casa"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:text="Prezioa: 9 €"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="184dp"
                    android:layout_height="185dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="127dp"
                        android:src="@drawable/ensalada" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_button_green"
                        android:minHeight="48dp"
                        android:text="Añadir"
                        android:textColor="#FFFFFF" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">


                <LinearLayout
                    android:layout_width="165dp"
                    android:layout_height="178dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:fontFamily="@font/catamaran_black"
                        android:text="Tortelini con salsa de queso trufado"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="89dp"
                        android:text="Plato tipico hecho con productos locales, rellenos de carne con salsa de queso y trufas"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:text="Prezioa: 13 €"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="184dp"
                    android:layout_height="185dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="118dp"
                        android:src="@drawable/tortelini" />


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="11dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_button_green"
                        android:minHeight="48dp"
                        android:text="Añadir"
                        android:textColor="#FFFFFF" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navMenu"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/roundednav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>